hphp/test/zend/good/ext/mysqli/tests/mysqli_ssl_set.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');
if (!function_exists('mysqli_ssl_set'))
	die("skip function not available");
?>