hphp/test/zend/bad/ext/mysql/tests/mysql_drop_db.php.skipif
<?php
require_once('skipif.inc');
if (!function_exists('mysql_drop_db'))
	die("Skip function is deprecated and not available");
?>